--- a/DirFileReader/src/main/resources/application.properties
+++ b/DirFileReader/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orclpdb
-spring.datasource.username=feedback
-spring.datasource.password=feedback
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orclpdb
+#spring.datasource.username=feedback
+#spring.datasource.password=feedback
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.datasource.url=jdbc:oracle:thin:@//10.21.2.101:1521/LICHFLDBTEST
+spring.datasource.username=testserver
+spring.datasource.password=testserver1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
