--- a/DirFileReader/src/main/resources/application.properties
+++ b/DirFileReader/src/main/resources/application.properties
@@ -7,12 +7,19 @@
 
 
 
-spring.datasource.url=jdbc:oracle:thin:@//10.21.2.101:1521/LICHFLDBTEST
-spring.datasource.username=testserver
-spring.datasource.password=testserver1
+#spring.datasource.url=jdbc:oracle:thin:@//10.21.2.101:1521/LICHFLDBTEST
+#spring.datasource.username=testserver
+#spring.datasource.password=testserver1
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:oracle:thin:@//10.21.1.17:1521/ulsdb
+spring.datasource.username=ulssupport
+spring.datasource.password=ulssupport
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 #jsp prefix and view resolver configuration
