--- a/DirFileReader/pom.xml
+++ b/DirFileReader/pom.xml
@@ -16,7 +16,7 @@
 	<description>File reader from Directory</description>
 	<!--<packaging>war</packaging>  -->
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,7 +73,7 @@
 	</dependencies>
 
 	<build>
-	<finalName>FileReader</finalName>
+	<finalName>SFTPFileReader</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
