--- a/DirFileReader/src/main/resources/application.properties
+++ b/DirFileReader/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.datasource.username=ulssupport
 spring.datasource.password=ulssupport
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
+server.port=9080
 #spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
